# spelunk

./: .gitignore  CLAUDE.md  PLAN.md  pyproject.toml
.claude/agent-memory/: MEMORY.md
.claude/agent-memory/tc-product-owner/: project_repo_scanner_init.md
.claude/agent-memory/tc-project-planner/: project_repo_scanner.md
briefs/: BRIEF-001.md
spelunk/: __init__.py  __main__.py  interfaces.py  models.py  scanner.py  schema.py  utils.py
spelunk/analysers/: __init__.py  file_tree.py
tasks/: TASK-001.md  TASK-002.md  TASK-003.md  TASK-004.md  TASK-005.md  TASK-006.md  TASK-007.md  TASK-008.md  TASK-009.md  TASK-010.md  TASK-011.md  TASK-012.md  TASK-013.md  TASK-014.md  TASK-015.md  TASK-016.md  TASK-017.md  TASK-018.md  TASK-019.md  TASK-020.md  TASK-021.md  TASK-022.md  TASK-023.md
tests/: conftest.py  test_file_tree.py  test_interfaces.py  test_models.py  test_packaging.py  test_scanner.py  test_schema.py  test_utils.py  test_utils_adversarial.py
